--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,20 @@
 {
-		"manifest_version": 2,
-		    "name": "fbnews",
-			  "version": "0.1", 
-		"content_scripts": [
-				  {
-						      "matches": [
-									        "https://www.facebook.com/"
-											    ],
-												    "js": ["jquery-3.1.0.min.js", "content.js"]
-													  }
-		]
+  "manifest_version": 2,
+  "name": "fbnews",
+  "version": "0.1",
+  "content_scripts": [
+    {
+      "matches": [
+        "https://www.facebook.com/"
+      ],
+      "js": [
+        "jquery-3.1.0.min.js",
+        "content.js"
+      ]
+    }
+  ],
+  "browser_action": {
+    "default_icon": "icon.png",
+    "default_title": "Will automatically give you headlines based on what's trending when you hit facebook.com"
+  }
 }
